<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>get.wordy</groupId>
    <artifactId>core</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Get Wordy :: Backend</name>

    <issueManagement>
        <url>https://github.com/inaumov/get-wordy-core/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <email>naumov@live.com</email>
            <name>Igor Naumov</name>
            <url>https://github.com/inaumov</url>
            <id>inaumov</id>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mysql.connector.version>8.0.32</mysql.connector.version>
        <junit.version>5.10.1</junit.version>
        <easymock.version>5.2.0</easymock.version>
        <flyway.version>9.22.3</flyway.version>
        <gw.jdbc.test-url>
            jdbc:mysql://localhost:3306/get_wordy_test?useUnicode=yes,characterEncoding=utf8,connectionCollation=utf8_general_ci,sql_mode=STRICT_TRANS_TABLES
        </gw.jdbc.test-url>
        <gw.jdbc.test-database>get_wordy_test</gw.jdbc.test-database>
        <gw.jdbc.test-user>root</gw.jdbc.test-user>
        <gw.jdbc.test-password>root</gw.jdbc.test-password>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.4.14</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.11</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysql.connector.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-mysql</artifactId>
            <version>${flyway.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <version>${easymock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <includes>
                        <includes>%regex[.*(Service).*Test.*]</includes>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-maven-plugin</artifactId>
                <version>${flyway.version}</version>
                <configuration>
                    <driver>com.mysql.cj.jdbc.Driver</driver>
                    <url>${gw.jdbc.test-url}</url>
                    <user>${gw.jdbc.test-user}</user>
                    <password>${gw.jdbc.test-password}</password>
                    <schemas>
                        <schema>${gw.jdbc.test-database}</schema>
                    </schemas>
                    <createSchemas>true</createSchemas>
                    <table>schema_history</table>
                    <encoding>UTF-8</encoding>
                    <validateOnMigrate>true</validateOnMigrate>
                    <cleanDisabled>false</cleanDisabled>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>with-integration-tests</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <environmentVariables>
                                <get.wordy.jdbc.url>${gw.jdbc.test-url}</get.wordy.jdbc.url>
                                <get.wordy.jdbc.database>${gw.jdbc.test-database}</get.wordy.jdbc.database>
                                <get.wordy.jdbc.user>${gw.jdbc.test-user}</get.wordy.jdbc.user>
                                <get.wordy.jdbc.password>${gw.jdbc.test-password}</get.wordy.jdbc.password>
                            </environmentVariables>
                            <includes>
                                <includes>%regex[.*(Service|Dao).*Test.*]</includes>
                            </includes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>